add Signal Sciences

--- a/api-gateway.conf
+++ b/api-gateway.conf
@@ -61,6 +61,8 @@ pcre_jit on;
 # error_log  /var/log/api-gateway/error.log warn;
 
 http {
+    include "/opt/sigsci/nginx/sigsci.conf";
+    
     default_type  text/plain;
 
     # Set in-memory buffer size
